<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/desText" />

            <TextView
                android:id="@+id/tvP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@android:drawable/menuitem_background"
                android:tint="#4CAF50"
                app:srcCompat="@android:drawable/ic_menu_add" />

            <TextView
                android:id="@+id/tvQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/quantity_text" />

            <ImageButton
                android:id="@+id/btnSubtract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:drawable/menuitem_background"
                android:scaleX="1.8"
                android:scaleY="1.8"
                app:srcCompat="@android:drawable/presence_busy" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPr"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/price"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>